# JSON2PDF

./: .gitignore  Makefile  README.md  awesome-cv.cls  example.json  main.py  pyproject.toml
.github/ISSUE_TEMPLATE/: compile-time-issue.md  run-time-issue.md
python/lexer/: Lexer.py
python/test/: test.py
samples/: letter.json  resume.json
samples/sections/: certifications.json  education.json  experience.json  extracurricular.json  projects.json
specs/: lexer_regex.json  parser_grammar  parser_grammar.json  parser_regex.json
src/: AwesomeCVTexGenerator.py  main.py
src/compiler/: Compiler.py  compiler.cpp  compiler.hpp  lexer.hpp  parser.hpp  semanter.cpp  semanter.hpp  synthesizer.cpp  synthesizer.hpp
src/constants/: nonterminals.cpp  nonterminals.hpp
src/elements/: nonterminal.cpp  nonterminal.hpp  token.cpp  token.hpp
src/generator/: cv_generator.py  honors_generator.py  record_generator.py  summary_generator.py
src/lexer/: Lexer.py
src/main/: argparser.cpp  argparser.hpp  dllupdater.cpp  dllupdater.hpp  doclogger.cpp  doclogger.hpp  inilogger.cpp  inilogger.hpp  main.cpp  thddispatcher.cpp  thddispatcher.hpp
src/parser/: Parser.py
src/sanitizer/: affiliation_sanitizer.py  cv_sanitizer.py  honors_sanitizer.py  record_sanitizer.py  summary_sanitizer.py
src/semanter/: Semanter.py
src/structs/: CmdArgs.hpp  ThdInfo.hpp
src/synthesizer/: Synthesizer.py
src/utils/: AwesomeCVSanitizer.py
temp/: main.py
temp/boot/: ArgParser.py  CompileManager.py  PhaseLogger.py
temp/enums/: Document.py  Phase.py
test/: test.py
tools/: hash.py
(+61 files in other folders)
