[tool.poetry]
name = "JSON2CV"
version = "1.0.0"
description = ""
authors = ["Endgineer"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
pyinstaller = "^6.6.0"
errorhandler = "^2.0.1"
argparse = "^1.4.0"
logging = "^0.4.9.6"
pylatex = "^1.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
